--- a/index.html
+++ b/index.html
@@ -51,9 +51,7 @@
 
           <p>If you shift the view again, selecting age instead of poverty, you will note that the majority of those without 
             healthcare are in the 35 - 45 age range.  But you will also find, that selection of obesity and smokers doesn't shift
-            the average age range by much at all!  The average age of all this data from 2014 seems to fall within that range. 
-            Please use this graph to shift the views and reflect on what you see.  Do you see any relationship between the data 
-            points represented?  Next article we will dig deeper into the relationship between the data points.   </p>
+            the average age range by much at all!  </p>
 
         </div>
       </div>
