--- a/index.html
+++ b/index.html
@@ -42,15 +42,12 @@
           <p>This data is older, 2014, but still relevant in demonstrating relatedness to the markers being measured. You can 
             see that when selecting poverty and absence of healthcare you find two extremes.  Texas, at the top of the graph, 
             having a poverty rate of 17.2 % with 24.9 % without healthcare and Massechusetts having a poverty rate of 11.6 % 
-            but 4% rate without healthcare. For additional background, Google, Massechusetts and healthcare, you find that in 
-            2006, healthcare reform was passed into law with the aim to provide coverage to 100% of it's residents. It would 
+            but 4% rate without healthcare. In 2006, Massechusetts healthcare reform was passed into law with the aim to provide coverage to 100% of it's residents. It would 
             be interesting to find the poverty level in Massechusetts prior to 2006, to see if this coverage helped improve 
-            the rate of poverty there.  A Google search of Texas finds that even in 2019, with one of the highest participating 
-            rates in Healthcare.gov (over 1 million), that the rate of participation drops each year and that Texas has taken
-            legal action against the ACA. </p>
+            the rate of poverty there. </p>
 
           <p>If you shift the view again, selecting age instead of poverty, you will note that the majority of those without 
-            healthcare are in the 35 - 45 age range.  But you will also find, that selection of obesity and smokers doesn't shift
+            healthcare are in the 35 - 45 age range. But you will also find, that selection of obesity and smokers doesn't shift
             the average age range by much at all!  </p>
 
         </div>
